Archivos de configuracion/LDAP-SMTP/iptables.rules
# Generated by xtables-save v1.8.2 on Wed Mar 18 16:08:29 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -s 10.0.0.1/32 -d 10.0.0.5/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 10.0.0.3/32 -d 10.0.0.5/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 10.0.0.1/32 -d 10.0.0.5/32 -p tcp -m tcp --dport 143 -j ACCEPT
-A INPUT -s 10.0.0.3/32 -d 10.0.0.5/32 -p tcp -m tcp --dport 143 -j ACCEPT
-A INPUT -s 10.0.0.1/32 -d 10.0.0.5/32 -p tcp -m tcp --dport 631 -j ACCEPT
-A INPUT -s 10.0.0.3/32 -d 10.0.0.5/32 -p tcp -m tcp --dport 631 -j ACCEPT
-A INPUT -s 10.0.0.1/32 -d 10.0.0.5/32 -p tcp -m tcp --dport 993 -j ACCEPT
-A INPUT -s 10.0.0.3/32 -d 10.0.0.5/32 -p tcp -m tcp --dport 993 -j ACCEPT
-A INPUT -s 10.0.0.1/32 -d 10.0.0.5/32 -p tcp -m tcp --dport 389 -j ACCEPT
-A INPUT -s 10.0.0.3/32 -d 10.0.0.5/32 -p tcp -m tcp --dport 389 -j ACCEPT
-A OUTPUT -s 10.0.0.5/32 -d 10.0.0.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -s 10.0.0.5/32 -d 10.0.0.3/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -s 10.0.0.5/32 -d 10.0.0.1/32 -p tcp -m tcp --dport 143 -j ACCEPT
-A OUTPUT -s 10.0.0.5/32 -d 10.0.0.3/32 -p tcp -m tcp --dport 143 -j ACCEPT
-A OUTPUT -s 10.0.0.5/32 -d 10.0.0.1/32 -p tcp -m tcp --dport 631 -j ACCEPT
-A OUTPUT -s 10.0.0.5/32 -d 10.0.0.3/32 -p tcp -m tcp --dport 631 -j ACCEPT
-A OUTPUT -s 10.0.0.5/32 -d 10.0.0.1/32 -p tcp -m tcp --dport 993 -j ACCEPT
-A OUTPUT -s 10.0.0.5/32 -d 10.0.0.3/32 -p tcp -m tcp --dport 993 -j ACCEPT
-A OUTPUT -s 10.0.0.5/32 -d 10.0.0.1/32 -p tcp -m tcp --dport 389 -j ACCEPT
-A OUTPUT -s 10.0.0.5/32 -d 10.0.0.3/32 -p tcp -m tcp --dport 389 -j ACCEPT
COMMIT
# Completed on Wed Mar 18 16:08:29 2020
